Adds form for user input and updates library

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
   <main>
     <div>
-      <form action="">
+      <form action="" id="book-form">
         <label for="book-title">Title </label>
-        <input type="text" name="book-title" id="book-title"> <br>
+        <input type="text" name="book-title" id="book-title" required> <br>
         <label for="book-author">Author </label>
-        <input type="text" name="book-author" id="book-author"> <br>
+        <input type="text" name="book-author" id="book-author" required> <br>
         <label for="book-pages">Pages </label>
-        <input type="text" name="book-pages" id="book-pages"> <br>
+        <input type="text" name="book-pages" id="book-pages" required> <br>
         <label for="book-read-status">Read Status</label>
-        <input type="checkbox" name="book-read-status" id="book-read-status"> <br>
-        <input type="submit" value="submit">
+        <input type="checkbox" name="book-read-status" id="book-read-status" > <br>
+        <input type="submit" value="submit" id="book-submit">
       </form>
     </div>
 
