--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Library</title>
+  <link rel="stylesheet" href="./style.css">
 
 </head>
 
@@ -13,28 +14,31 @@
 
   <header>
     <h1>Simple Library </h1>
-
+    <button id="add-book">Add a Book</button>
   </header>
 
   <main>
-    <div>
-      <form action="" id="book-form">
-        <label for="book-title">Title </label>
-        <input type="text" name="book-title" id="book-title" required> <br>
-        <label for="book-author">Author </label>
-        <input type="text" name="book-author" id="book-author" required> <br>
-        <label for="book-pages">Pages </label>
-        <input type="text" name="book-pages" id="book-pages" required> <br>
+    <div class="form-popup">
+      <form action="" class="book-form">
+
+        <input placeholder="Title" type="text" name="book-title" id="book-title" required> <br>
+
+        <input placeholder="Author" type="text" name="book-author" id="book-author" required> <br>
+
+        <input placeholder="Pages" type="text" name="book-pages" id="book-pages" required> <br>
+
         <label for="book-read-status">Read Status</label>
-        <input type="checkbox" name="book-read-status" id="book-read-status" > <br>
+        <input type="checkbox" name="book-read-status" id="book-read-status"> <br>
+
         <input type="submit" value="submit" id="book-submit">
+
       </form>
     </div>
 
     <div id="book-shelf">
 
     </div>
-    
+
 
   </main>
   <script src="./app.js"></script>
