Adds popup book input form and overlay

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   </header>
 
   <main>
+    <div id="overlay">
+    </div>
+
     <div class="form-popup">
       <form action="" class="book-form">
 
@@ -34,6 +37,7 @@
 
       </form>
     </div>
+
 
     <div id="book-shelf">
 
