Adds remove button function
gives user option to remove book from book-shelf

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <header>
     <h1>Simple Library </h1>
-    <button id="add-book">Add a Book</button>
+    <button id="add-book-button">Add a Book</button>
   </header>
 
   <main>
@@ -28,7 +28,7 @@
 
         <input placeholder="Author" type="text" name="book-author" id="book-author" required> <br>
 
-        <input placeholder="Pages" type="text" name="book-pages" id="book-pages" required> <br>
+        <input placeholder="Pages" type="number" name="book-pages" id="book-pages" required> <br>
 
         <label for="book-read-status">Read Status</label>
         <input type="checkbox" name="book-read-status" id="book-read-status"> <br>
