Adds validation to pages read

--- a/index.html
+++ b/index.html
@@ -1,51 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Simple Library</title>
+		<link rel="stylesheet" href="./style.css" />
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Library</title>
-  <link rel="stylesheet" href="./style.css">
+	<body>
+		<header>
+			<h1>Simple Library</h1>
+			<button id="add-book-button">Add a Book</button>
+		</header>
 
-</head>
+		<main>
+			<div id="overlay"></div>
 
-<body>
+			<div class="form-popup">
+				<form action="" class="book-form">
+					<input placeholder="Title" type="text" name="book-title" id="book-title" required />
+					<br />
 
-  <header>
-    <h1>Simple Library </h1>
-    <button id="add-book-button">Add a Book</button>
-  </header>
+					<input placeholder="Author" type="text" name="book-author" id="book-author" required />
+					<br />
 
-  <main>
-    <div id="overlay">
-    </div>
+					<input
+						placeholder="Pages"
+						type="text"
+						name="book-pages"
+						id="book-pages"
+						required
+						pattern="\d+"
+					/>
+					<br />
 
-    <div class="form-popup">
-      <form action="" class="book-form">
+					<label for="book-read-status">Read Status</label>
+					<input type="checkbox" name="book-read-status" id="book-read-status" /> <br />
 
-        <input placeholder="Title" type="text" name="book-title" id="book-title" required> <br>
+					<input type="submit" value="submit" id="book-submit" />
+				</form>
+			</div>
 
-        <input placeholder="Author" type="text" name="book-author" id="book-author" required> <br>
-
-        <input placeholder="Pages" type="number" name="book-pages" id="book-pages" required> <br>
-
-        <label for="book-read-status">Read Status</label>
-        <input type="checkbox" name="book-read-status" id="book-read-status"> <br>
-
-        <input type="submit" value="submit" id="book-submit">
-
-      </form>
-    </div>
-
-
-    <div id="book-shelf">
-
-    </div>
-
-
-  </main>
-  <script src="./app.js"></script>
-</body>
-
+			<div id="book-shelf"></div>
+		</main>
+		<script src="./app.js"></script>
+	</body>
 </html>
